Fix #104772: Pdf page alignment issue fixed

--- a/src/app/component/app-chatbot/app-chatbot.component.scss
+++ b/src/app/component/app-chatbot/app-chatbot.component.scss
@@ -152,13 +152,6 @@
     background-color: transparent !important;
   }
 }
-::ng-deep .mat-form-field-wrapper {
-  padding: 0 !important;
-}
-
-::ng-deep .mat-form-field-infix {
-  border-top: unset !important;
-}
 
 .loader {
   position: absolute;
